public/stylesheets/style.css
body, div, canvas
{
	image-rendering: optimizeSpeed;
	-webkit-image-rendering: optimizeSpeed;
	-webkit-interpolation-mode: nearest-neighbor;
}

body {
	overflow: hidden;
}

body{padding:0; margin:0;font-size:12px;background-color:#143e79;}
body, html{height: 100%;}
#outer{height:100%; overflow:hidden; position:relative; width:100%;}
#outer[id]{display:table; position:static;}
#middle{position:absolute; top:50%;} /* for ie only*/
#middle[id]{display:table-cell; vertical-align:middle; position:static;}

#container {
	background: -moz-linear-gradient(top, #143e79, #143e79);
	background: -webkit-linear-gradient(top, #143e79, #143e79);
	background: -o-linear-gradient(top, #143e79, #143e79);
	overflow: hidden;
}

.panel {
	position: absolute;
	top: 8%;
	left: 5%;
	height: 85%;
	width: 90%;
	background: #f5f5f5;
	z-index: 9999;
	overflow: auto;
}

.panel ul {
	font: 16px 黑体;
	list-style: none;
	margin: 0;
	padding: 0;
	overflow: visible;
}


.panel li {
	border-bottom: 2px solid #eaeaea;
}

.panel li a {
	display: block;
	padding: 12px 10px;
	color: #333;
	text-decoration: none;
	cursor: pointer;
}

.panel li a:active, .panel li a:hover {
	background-color: #31abd4;
}

